# FfmpegTest

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffmpegtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  TestFFmpeg.cpp  TestFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
app/src/main/java/com/example/ffmpegtest/: MainActivity.java  TestPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
